LIBWEB-5305. CSS overflow fix.
-Note this fix is hardcoded into the SASS build. We will need
to evaluate the actual SASS if we ever intend to build this again.

https://issues.umd.edu/browse/LIBWEB-5305

--- a/web/themes/frozen/umd_terp/static/src/components/site-header/_site-header.scss
+++ b/web/themes/frozen/umd_terp/static/src/components/site-header/_site-header.scss
@@ -4,7 +4,7 @@
 }
 
 .dialog-off-canvas-main-canvas {
-  overflow: hidden;
+  // overflow: hidden;
 }
 
 .site-header {
